Changelog
=========

0.9 - Unreleased
----------------

* Fixed help text formatting.
  [fschulze]

0.8 - 2009-03-25
----------------

* Added authentication support to subversion commands.
  [fschulze]

* Added ``-a`` option to ``checkout`` command to limit matching to the
  packages declared by the ``auto-checkout`` option. If no further argument
  is given, then all the packages from ``auto-checkout`` are processed.
  [fschulze]

0.7 - 2009-03-24
----------------

* Added ``update`` command to ``checkout`` script.
  [fschulze]

* Added ``status`` command to ``checkout`` script.
  [fschulze]

* Added status flag to ``list`` command to indicate packages with wrong URL.
  [fschulze]

* If the working copy is clean, then checkout automatically switches svn
  packages.
  [fschulze]

* Skip on checkout errors during buildout, so the develop script is generated
  and you get a chance to inspect and fix the problems.
  [fschulze]

* Check remote url and stop checkout if it differs.
  [fschulze]

* Added various options to the ``list`` command.
  [fschulze]

* Instead of the ``checkout`` script, there is now a ``develop`` script with
  various commands.
  [fschulze]

0.6 - 2009-03-24
----------------

* Added custom logging formatter for nicer output in the checkout script.
  [fschulze]

* Removed the '-e' option, regular expression matching is the default now.
  [fschulze]

* Made it possible to specify more than one regular expression without the
  need to use a pipe symbol and quotes.
  [fschulze]

* Added help text for the checkout script to pypi page.
  [fschulze]

* Add a warning to rerun buildout after checkout.
  [fschulze]

0.5 - 2009-03-23
----------------

* Make sure that the updated versions are actually used.
  [fschulze]

0.4 - 2009-03-22
----------------

* Fixed logging, which fixes the info message output.
  [fschulze]

* Skip checkout of existing packages.
  [fschulze]

0.3 - 2009-03-22
----------------
